--- a/react-frontend/src/pages/Login.css
+++ b/react-frontend/src/pages/Login.css
@@ -90,7 +90,7 @@ input[type="password"] {
     box-sizing: border-box;
     outline: none;
     padding: 10px 10px 10px 45px;
-    
+    height:41px;
 }
 
 .input-wrapper {
