Generar PDF docente

--- a/react-frontend/src/pages/Administrador/Matricula/ModalListaEstudiante.css
+++ b/react-frontend/src/pages/Administrador/Matricula/ModalListaEstudiante.css
@@ -1,7 +1,7 @@
 .modal-lista-estudiantes {
-  width: 80%;
-  max-width: 800px;
-  max-height: 80vh;
+  width: 90%;
+  max-width: 900px;
+  max-height: 100vh;
   overflow-y: auto;
   background: white;
   border-radius: 8px;
@@ -49,4 +49,5 @@
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
+  font-size:16px;
 }
