Editar calificaciones grados

--- a/react-frontend/src/components/ui/Botones.css
+++ b/react-frontend/src/components/ui/Botones.css
@@ -41,3 +41,4 @@
 .btn-view { background-color: #0a48f2ff; }
 .btn-load { background-color: #FF8C00; }
 .btn-send {background-color: #1E6FBA;}
+.btn-add-column {background-color: #ff0080; }
