--- a/react-frontend/src/pages/Estudiante/Horario/HorarioEstudiante.css
+++ b/react-frontend/src/pages/Estudiante/Horario/HorarioEstudiante.css
@@ -1,13 +1,42 @@
 .schedules-container{
   min-height: 200vh;
-  background: linear-gradient(135deg, #5B8FF9, #3A6DD8);
+  background: #00B4D8;
   color: white;
   padding: 50px 20px;
 }
 
-.ensayo{
-    margin-left:-45px;
-    margin-top:-100px;
+.header-section{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
+
+.back-button{
+  display:flex;
+  align-items:center;
+  font-size:18px;
+  gap:8px;
+  color:#fff;
+  margin-left:10px;
+}
+
+.icon-back{
+  font-size:25px;
+}
+
+.current-info{ 
+  padding:5px;
+  font-size:18px;
+  color:#fff;
+  margin-right:15px;
+}
+
+.current-time{
+  text-align:center;
+  margin-top:5px;
+}
+
+
+
 
 
