--- a/react-frontend/src/components/ui/Modal.css
+++ b/react-frontend/src/components/ui/Modal.css
@@ -17,10 +17,10 @@
 
 .modal-content-teacher {
   background:white;
-  border-radius: 16px;
+  border-radius: 10px;
   width: 100%;
   max-width: 600px;
-  height: 260px;
+  height: 330px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -43,7 +43,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 24px; 
+  padding: 10px 24px; 
   border-bottom: 1px solid #eee;
 }
 
@@ -56,7 +56,7 @@
 }
 
 .modal-title-360 {
-  color: var(--color-secondary-dark);
+  color:blue;
   font-weight: 800;
   font-size: 1.4rem;
   margin-left: 4px;
@@ -79,17 +79,18 @@
 }
 
 .modal-close:hover { 
-  transform: rotate(90deg) scale(1.2);
-  
+  transform: rotate(90deg) scale(1.2);  
 }
 
 
 .modal-body {
   padding: 24px;
-  color: #555;
-  font-size: 1.2rem;
+  color: #000;
+  font-size: 1.3rem;
+  font-weight:bold;  
   line-height: 1.6;
   text-align: center;
+  margin-top:20px;
 }
 
 .modal-footer {
@@ -174,3 +175,19 @@
   background-color: #e53e3e;
   color: white;
 }
+
+.icon-large {
+  font-size: 25px;  
+}
+
+
+.btn-success {
+  background-color: #48bb78 !important; /* Verde */
+  color: white !important;
+  border: none !important;
+}
+
+.btn-success:hover {
+  background-color: #38a169 !important; /* Verde más oscuro al pasar el mouse */
+}
+
