--- a/react-frontend/src/pages/Administrador/EditarMenu/EditarMenu.css
+++ b/react-frontend/src/pages/Administrador/EditarMenu/EditarMenu.css
@@ -189,25 +189,24 @@
 }
 
 .modal-content .close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 28px;
-  cursor: pointer;
-  color: #333;
-  font-weight: bold;
   background: none;
-  border: none;
+  border: none; 
+  cursor: pointer;
+  color: #7f8c8d;
   padding: 0;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
+  transition: transform 0.3s ease, color 0.3s ease;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .modal-content .close:hover,
 .modal-content .close:focus {
-  color: red;
-  text-decoration: none;
+ transform: rotate(90deg) scale(1.2);
 }
 
 .modal-content h2 {
@@ -237,7 +236,7 @@
 #editarForm button {
   margin-top: 20px;
   padding: 15px;
-  background-color: #007BFF;
+  background-color: #28a745;
   color: white;
   border: none;
   border-radius: 6px;
@@ -245,17 +244,38 @@
   font-weight: bold;
   cursor: pointer;
   transition: transform 0.2s, background-color 0.2s;
+  width:300px;
+  margin: 5px auto;
 }
 
 #editarForm button:hover:not(:disabled) {
-  transform: scale(1.05);
-  background-color: #0056b3;
+  background-color: #218838;
+  transform:scale(1.05);
 }
 
 #editarForm button:disabled {
   background-color: #6c757d;
   cursor: not-allowed;
   opacity: 0.6;
+}
+
+
+.title-school-menu{
+  border-bottom: 2px solid #ccced1ff;
+}
+
+.title-school-menu h2{
+  text-align:start;    
+}
+
+.title-school-menu .modal-title-360-menu{
+  font-size: 25px;
+  font-weight:700;
+  color: #0056b3;
+}
+
+.modal-content h2{
+  margin-top:15px;
 }
 
 .confirm-modal-content {
